# vml

./: Cargo.toml  Dockerfile  LICENSE  README.md  config.toml  images.toml  rustfmt.toml  upstream-pr-fix-faccess-non-x86-build.patch  vml.spec
.cargo/: config.toml
doc/cloud-init/: README.md  root-key-user-data.yaml  user-user-data.yaml
doc/commands/: README.md  create.md  list.md
doc/examples/buildbot/: README.md  playbook.yaml
doc/extended_commands/: README.md  vml-xrun
doc/network/: README.md  vml-common.toml  vnet.sh
files/: config.toml  images-header  images.toml
files/configs/: config.toml  images.toml
files/efis/aarch64/: code.fd
files/efis/x86_64/: code.fd
files/get-url-progs/: vml-get-arch  vml-get-centos  vml-get-fedora-rawhide  vml-get-gentoo
files/scripts/: cleanup.sh  inventory.py
src/: cache.rs  cli.rs  cloud_init.rs  config.rs  errors.rs  files.rs  gui.rs  images.rs  lib.rs  main.rs  net.rs  openssh_config.rs  socket.rs  specified_by.rs  ssh.rs  string_like.rs  template.rs  vm.rs  vm_config.rs  vms_creator.rs
test/: playbook.yaml  test-distros-inner.sh  test-distros.sh  test-images-inner.sh  test-images.sh  test.sh
