[package]
name = "vml"
version = "0.1.7"
rust-version = "1.56"
authors = ["Mikhail Gordeev <obirvalger@altlinux.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
byte-unit = { version = "4.0.14", default-features = false, features = ["serde", "std"] }
clap = { version = "3.2.8", features = ["unstable-replace", "cargo"] }
clap_complete = "3.2.2"
cmd_lib = "1.3.0"
comfy-table = "< 5.0.1"
json = "0.12.4"
procfs = "0.14.1"
rand = "0.8.5"
reqwest = { version = "0.11.12", default-features = false, features = ["blocking"] }
rust-embed = "6.4.1"
serde = { version = "1.0.137", features = ["derive"] }
shellexpand = "2.1.0"
tempfile = "3.3.0"
tera = "1.16.0"
thiserror = "1.0.31"
toml = "0.5.9"
urlencoding = "2.1.0"
walkdir = "2.3.2"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
