[package]
name = "vml"
version = "0.1.10"
rust-version = "1.75"
authors = ["Mikhail Gordeev <obirvalger@altlinux.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
byte-unit = { version = "4.0.14", default-features = false, features = ["serde", "std"] }
clap = { version = "<4", features = ["unstable-replace", "cargo"] }
clap_complete = "<4"
cmd_lib = "1.3.0"
# Requires rust 1.59
comfy-table = "< 5.0.1"
env_logger = "0.11.2"
file-lock = "2.1.10"
infer = { git = "https://github.com/Obirvalger/infer" }
json = "0.12.4"
log = { version = "0.4.20", features = ["serde"] }
procfs = "0.16.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", default-features = false, features = ["blocking"] }
rust-embed = "8.5.0"
serde = { version = "1.0.145", features = ["derive"] }
shellexpand = "3.1.0"
tempfile = "3.3.0"
tera = "1.17.1"
thiserror = "1.0.37"
toml = "0.8.15"
urlencoding = "2.1.2"
walkdir = "2.3.2"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
